--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <h1>Rhowyen</h1>
       <p>clown by day, luring you to the enchanted forest by night</p>
       <p class="status" data-live="false">🌙 Offline</p>
+      <p>Find me Live on Twitch and Youtube with Vods available almost immediately!</p>
       <h2> The Community Server!</h2>
 <p>Join us on Discord to hang out, share art, and chat about all the chaos we create together!</p>
 
