Add favicon and update profile section content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rhowyen</title>
-
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/pics/icons/favicon.png">
+  
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,27 +17,29 @@
 
 <body>
 
-  <!-- Ambient Audio -->
+  <!-- making this shiz myspacey --> 
+  <!-- Foresty Audio -->
   <audio id="forest-audio" loop preload="none">
     <source src="assets/audio/forest.mp3" type="audio/mpeg">
   </audio>
 
   <!-- Floating Controls -->
   <button id="audio-toggle"> ambience: off</button>
-  <button id="theme-toggle">🌙 night mode</button>
+  <button id="theme-toggle"> Dark Mode </button>
 
   <div class="page">
-
+ 
     <!-- Profile Column -->
     <aside class="profile box">
       <img src="assets/pics/avatar.jpg" alt="Rhowyen Avatar" class="avatar" />
       <h1>Rhowyen</h1>
-      <p>clown by day, luring you to the enchanted forest by night</p>
-      <!-- <p class="status" data-live="false">🌙 Offline</p> -->
-      <p>Find me Live on Twitch and Youtube with Vods available almost immediately!</p>
-      <h2> The Community Server!</h2>
-<p>Join us on Discord to hang out, share art, and chat about all the chaos we create together!</p>
+      <p>Some know me as the Clown Queen</p>
+      <p class="status" data-live="false">Currently: Offline</p>
+      <p>Find me live on Twitch and Youtube </p>
 
+      <!-- Discord Server Widget -->
+      <h2>~ The Community Server! ~</h2>
+<p>Join us on Discord to hang out, share art, and chat about all the chaos we create together!</p>
 <button class="discord-toggle">
   ~ Join the Community ~
 </button>
@@ -51,7 +55,7 @@
 </div>
     </aside>
 
-    <!-- Main Content -->
+    <!-- Main Column -->
     <main class="content box">
 
       <img
@@ -67,12 +71,11 @@
         <button class="collapse-toggle">About Me</button>
         <div class="collapse-content">
           <p>
-            Hi! I’m Rhowyen, a green haired, clown-loving, cozy streamer who loves chill games, pixie
-            forest aesthetics, random lore drops, and hanging out with my friends online.
-            We balance clownish antics with relaxing vibes and adventuring through
+            Hi! I’m Rhowyen, a green haired, clown-loving, cozy streamer who loves chill games (like the Legend of Zelda hehehehe), 
+            my cat Stoney (see her beauty above), random lore drops, and hanging out with my friends online.
+           Carefully balancing clownish antics with relaxing vibes and adventuring through
             beautiful virtual worlds. 
-            Join us for some laid-back fun 
-            with a side of whimsy and bullying of and from chat!
+            Join me n Stoney in our antics <strong>ON</strong>- and <strong>OFF</strong>line! <3
           </p>
         </div>
       </section>
@@ -80,33 +83,79 @@
       <section class="links">
         <h2>~ My Links ~</h2>
         <a href="https://www.twitch.tv/rhowyen">Twitch</a>
-        <a href="#https://www.youtube.com/@rhowyen">YouTube</a>
-        <a href="https://www.throne.com/rhowyen">Wishlist</a>
+        <a href="https://www.youtube.com/@rhowyen">YouTube</a>
+        <a href="https://www.throne.com/rhowyen">Throne (Wish List)</a> <!-- I swear its not a wish list of thrones!! -->
+        <a href="https://store.steampowered.com/wishlist/id/rhowyen/">Steam Wish List (Pc Games)</a> <!-- why doesn't nintendo let me have an updating wishlist only a frickin snapshot booooo -->
         <a href="https://www.instagram.com/rhowyen/">Instagram</a>
         <a href="https://www.threads.net/@rhowyen">Threads</a>
+        <a href="https://share.upscrolled.com/en/user/baefd870-4e3b-4940-98af-7e321fe9ab9a/">Upscrolled</a> <!-- why does this have to ruin my cool link cohesion across the board damnit -->
         <a href="https://ko-fi.com/rhowyen">Ko-fi</a>
         <a href="https://rhowyen-shop.fourthwall.com">Merch</a>
         <a href="https://rhowyen.substack.com/">Substack</a>
-        <a href="https://twitter.com/rh0wyen">Twitter</a>
-        <!-- <a href="https://www.patreon.com/rhowyen">Patreon</a> -->
+        <a href="https://twitter.com/rhowyen_">Twitter</a> <!-- I hate musk but damn why is the twitter community still so alive -->
+        <!-- <a href="https://www.patreon.com/rhowyen">Patreon</a> -- add this line back when patreon live again -->
       </section>
-
-      <!-- <section class="guestbook box">
-        <h2> Guestbook</h2>
-        <p><strong>MossWizard:</strong> unmatched vibes</p>
-        <p><strong>LeafLover99:</strong> i never want to leave</p>
-      </section> -->
       </main>
 
     <!-- Schedule Column -->
+    <!-- Gotta actually come up with a schedule -->
+    <!-- Actually maybe this vagueness works -->
     <aside class="schedule box">
       <h2>~ Schedule ~</h2>
       <ul>
-        <li>Mon — Cozy Chats</li>
-        <li>Wed — Zelda Adventures</li>
-        <li>Sun — Weekly Winddown</li>
+        <li>Monday evening - Cozy Chats</li>
+        <li>Wednesday noon - Zelda Adventures</li>
+        <li>Sunday evening - Weekly Wind Down</li>
       </ul>
-      <p><em>Timezone: EST</em></p>
+      <p><em>Timezone: EST</em></p> <!-- Gotta remeber to change this when moving or traveling -->
+
+      <!-- Top 8 hehehehe -->
+      <!-- <section class="top8">
+  <h2>~ Top 8 ~</h2>
+
+  <div class="top8-grid">
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-1.jpg" alt="Top 8 Friend 1">
+      <span>MossWizard</span>
+    </a>
+
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-2.jpg" alt="Top 8 Friend 2">
+      <span>LeafLover99</span>
+    </a>
+
+    <a href="https://www.instagram.com/arainacatherine" class="top8-card">
+      <img src="assets/pics/top8-3.jpg" alt="Top 8 Friend 3">       <-- this one is reserved lol
+      <span>Raina</span>
+    </a>
+
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-4.jpg" alt="Top 8 Friend 4">
+      <span>WillowWitch</span>
+    </a>
+
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-5.jpg" alt="Top 8 Friend 5">
+      <span>Firefly</span>
+    </a>
+
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-6.jpg" alt="Top 8 Friend 6">
+      <span>PixelGoblin</span>
+    </a>
+
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-7.jpg" alt="Top 8 Friend 7">
+      <span>MoonCat</span>
+    </a>
+
+    <a href="#" class="top8-card">
+      <img src="assets/pics/top8-8.jpg" alt="Top 8 Friend 8">
+      <span>ForestSprite</span>
+    </a>
+  </div>
+</section> -->
+
     </aside>
   </div>
 
